Fix button and navbar dissapearing on mobile

--- a/css/style.css
+++ b/css/style.css
@@ -2940,94 +2940,15 @@ h6 {
 @media (max-width: 991px) {
   /* Main Menu Area css
   ============================================================================================ */
-  .navbar-toggler {
-    border: none;
-    border-radius: 0px;
-    padding: 0px;
-    cursor: pointer;
-    margin-top: 27px;
-    margin-bottom: 23px; }
-
-  .header_area .navbar {
-    background: #000; }
-
-  .navbar-toggler[aria-expanded="false"] span:nth-child(2) {
-    opacity: 1; }
-
-  .navbar-toggler[aria-expanded="true"] span:nth-child(2) {
-    opacity: 0; }
-
-  .navbar-toggler[aria-expanded="true"] span:first-child {
-    transform: rotate(-45deg);
-    position: relative;
-    top: 7.5px; }
-
-  .navbar-toggler[aria-expanded="true"] span:last-child {
-    transform: rotate(45deg);
-    bottom: 6px;
-    position: relative; }
-
-  .navbar-toggler span {
-    display: block;
-    width: 25px;
-    height: 3px;
-    background: #fff;
-    margin: auto;
-    margin-bottom: 4px;
-    transition: all 400ms linear;
-    cursor: pointer; }
-
-  .navbar .container {
-    padding-left: 15px;
-    padding-right: 15px; }
-
-  .nav {
-    padding: 0px 0px; }
-
   .header_area + section,
   .header_area + row,
   .header_area + div {
     margin-top: 117px; }
 
-  .header_top .nav {
-    padding: 0px; }
-
-  .header_area .navbar .nav .nav-item .nav-link {
-    line-height: 40px;
-    margin-right: 0px;
-    display: block;
-    border-bottom: 1px solid #ededed33;
-    border-radius: 0px;
-    color: #fff; }
-
-  .header_area .navbar .search {
-    margin-left: 0px; }
-
-  .header_area .navbar-collapse {
-    max-height: 340px;
-    overflow-y: scroll; }
-
-  .header_area .navbar .nav .nav-item.submenu ul .nav-item .nav-link {
-    padding: 0px 15px; }
-
-  .header_area .navbar .nav .nav-item {
-    margin-right: 0px; }
-
   .header_area + section,
   .header_area + row,
   .header_area + div {
     margin-top: 0px; }
-
-  .header_area.navbar_fixed .main_menu .navbar .nav .nav-item .nav-link {
-    line-height: 40px;
-    color: #fff; }
-
-  .header_area.white_menu.navbar_fixed .main_menu .navbar .nav .nav-item .nav-link {
-    line-height: 40px;
-    color: #fff; }
-
-  .header_area.white_menu .navbar .nav .nav-item .nav-link {
-    color: #222; }
 
   /* End Main Menu Area css
   ============================================================================================ */
@@ -3097,9 +3018,6 @@ h6 {
   .home_banner_area .banner_inner .home_left_img {
     display: none; }
 
-  .header_area .navbar .primary_btn {
-    display: none; }
-
   .left_side_text {
     margin-bottom: 50px; }
 
@@ -3120,8 +3038,6 @@ h6 {
 
   .home_banner_area .banner_inner .banner_content {
     margin-top: 0px; }
-    .home_banner_area .banner_inner .banner_content .primary_btn {
-      display: none; }
 
   /* Blog Page Area css
   ============================================================================================ */
@@ -3156,14 +3072,6 @@ h6 {
 
   /* End End Footer Area css
   ============================================================================================ */
-  .made_life_inner .nav.nav-tabs li {
-    flex: 0 0 50%;
-    max-width: 50%;
-    margin-bottom: 15px; }
-
-  .made_life_inner .nav.nav-tabs {
-    margin-bottom: -15px; }
-
   .made_life_area.made_white .left_side_text {
     margin-bottom: 0px;
     margin-top: 30px; } }
